<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- modulo identf-->
    <string name="app_name">Portal de Artesanías</string>
    <string name="bt_scan">Escanear Codigo</string>
    <string name="bt_volver">Volver</string>
    <string name="titleapp">Tu Portal de Artesanías</string>
    <string name="bt_buscar">Buscar URL</string>
    <string name="action_acerca">Acerca de</string>
    <string name="action_borrard">Borrar datos</string>

    <!-- actividad inicial-->
    <string name="title_activity_launch">TuPoArt</string>
    <string name="bt_mdid">Escanear codigo QR</string>
    <string name="bt_catg1">Bisuteria</string>
    <string name="bt_catg2">Ceramica</string>
    <string name="bt_catg3">Tejido</string>
    <string name="bt_catg4">Marroquineria</string>
    <string name="bt_allcat">Todas las categorias</string>
    <string name="bt_shcat">Carrito de compras</string>
    <string name="bt_catg5">Pintura</string>
    <string name="bt_catg6">Porcelanicrom</string>
    <string name="bt_catg7">Orfebreria</string>
    <string name="bt_catg8">Tela</string>
    <!-- carrito de compras-->

    <!-- mostrar datos -->
    <string name="bt_mostrar">MOSTRAR</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_shoppingcart">Activity_shoppingcart</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mostrar_prod">MostrarProd</string>
    <string name="title_activity_filtrar">FiltrarActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="title_section1">Escanear código QR</string>
    <string name="title_section2">Todas las categorías</string>
    <string name="title_section3">Madera</string>
    <string name="title_section4">Bisutería</string>
    <string name="title_section5">Tejidos</string>
    <string name="title_section6">Orfebrería</string>
    <string name="title_section7">Cerámica</string>
    <string name="title_section8">Porcelanicron</string>
    <string name="title_section9">Pintura</string>
    <string name="title_section10">Marroquinería</string>
    <string name="title_section11">Tela</string>
    <string name="title_section12">Carrito de compras</string>
    <string name="title_activity_descripcion">Detalles del Producto</string>
</resources>
