<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.etiel.myapplication.MenuActivity$PlaceholderFragment">

<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_scan"
        android:id="@+id/bt_scan"
        android:layout_marginTop="36dp"
        android:background="#fe5f55"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:background="#d6d1b1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Informacion leida"
        android:layout_below="@+id/bt_scan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleapp"
        android:id="@+id/textView2"
        android:background="#c7efcf"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wv_prod"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_buscar"
        android:onClick="buscarOnClick"
        android:background="#fe5f55"
        android:id="@+id/bt_buscar"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_volver"
        android:onClick="VolverOnClick"
        android:background="#fe5f55"
        android:id="@+id/bt_volver"
        android:layout_alignTop="@+id/bt_buscar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/textView2"
        android:id="@+id/linearl">

    </LinearLayout>

</RelativeLayout>
